--- a/i_talks.html
+++ b/i_talks.html
@@ -401,570 +401,86 @@ href="http://www.ds3-datascience-polytechnique.fr/">Data
 Science Summer School</a>, CMAP, École Polytechnique,
 Paris, France, Aug 28-Sept 1, 2017 (invited minicourse on
 randomized optimization methods) [<a
-href="talks/RandOpt-DS3.pdf">slides</a>] <a
-href="https://portail.polytechnique.edu/datascience/fr/les-conferences"><img
-style="border: 0px solid ; width: 30px; height: 21px;"
-alt="YouTube" src="imgs/youtube.png"></a></p>
+href="talks/RandOpt-DS3.pdf">slides</a>] <br>
+<a href="https://portail.polytechnique.edu/datascience/fr/les-conferences">
+<img border="0" height="15px" alt="YouTube" src="imgs/youtube.png"></a></p>
+
 <p>[132] <a href="https://2017.icml.cc/">34th International
 Conference on Machine Learning</a>, Sydney, Australia,
 August 6-11, 2017 (attending)</p>
+
 <p>[131] <a
 href="http://www.fields.utoronto.ca/activities/17-18/AN70">Workshop
 on Convex Optimization and Applications</a>, Fields
 Institute, Toronto, Canada, July 4-7, 2017 (invited) [<a
 href="talks/TALK-2017-FieldsInstitute-AN70.pdf">slides</a>]</p>
+
 <p>[130] Research Seminar, Cardiff University, UK, June 1,
 2017 (invited)<br>
 </p>
+
 <p>[129] Research Seminar, Plymouth University, UK, May 31,
 2017 (invited)<a href="http://www.siam.org/meetings/op17/"><br>
 </a></p>
+
 <p>[128] <a href="http://www.siam.org/meetings/op17/">SIAM
 Conference on Optimization</a>, Vancouver, Canada, May
 22-25, 2017 (invited)<a
 href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx"><br>
 </a></p>
 
-          <p>[127] <a
+<p>[127] <a
 href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx">AMCS Graduate Seminar</a>, KAUST, Thuwal, Saudi Arabia, April
-            13, 2017 (invited)<a
-              href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx"><br>
-            </a></p>
+13, 2017 (invited)<a
+href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx"><br>
+</a></p>
 
-          <p>[126] <a
-              href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx">Visual
+<p>[126] <a
+href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx">Visual Computing - Modeling and Reconstruction</a>, KAUST
+Conference Center, Thuwal, Saudi Arabia, April 10-12, 2017
+(invited) [<a href="talks/TALK-SPDHG.pdf">slides</a>] </p>
 
+<p>[125] <a href="http://www.baspfrontiers.org/">2017 BASP
+Frontiers Workshop</a>, Villars-sur-Ollon, Switzerland,
+January 29-February 2, 2017 (invited)</p>
 
+<p>[124] Research Seminar, Department of Computing, Imperial
+College London, UK, January 20, 2017 (invited) </p>
 
 
 
+<h1> 2016 Talks</h1>
 
+<p>[123] <a
+href="https://events.yandex.ru/events/science-seminars/02-dec-2016/">Yandex  Seminar</a>, Moscow, Russia, December 2, 2016 (invited) <br>
+<a href="https://www.youtube.com/watch?v=DLbZJnz04cE"><img alt="YouTube" src="imgs/youtube.png" height="15"></a></p>
 
+<p>[122] <a href="http://www.skoltech.ru/en/">Skoltech</a> Seminar, Moscow, Russia, December 1, 2016 (invited)</p>
 
+<p>[121] <a
+href="http://machinelearningforbigdata.telecom-paristech.fr/fr/article/workshop-friday-novembre-25-distributed-machine-learning">Workshop on Distributed Machine Learning</a>, Telecom ParisTech,
+Paris, November 25, 2016 (invited)</p>
 
+<p>[120] <a href="http://www.southampton.ac.uk/cormsis/news/events/2016/Nov-Dec/seminar-richtarik.page?">CORMSIS  Seminar</a>, University of Southampton, Southampton, UK, November 17, 2016 (invited)<br>
+</p>
 
+<p>[119] <a href="http://www.lse.ac.uk/maths/Seminars/Seminar-on-Combinatorics-Games-and-Optimisation.aspx">Seminar on Combinatorics, Games and Optimisation</a>, London School of Economics, London, UK, November 16, 2016 (invited)</p>
 
+<p>[118] <a href="http://warwicksiam.yolasite.com/stream-1.php">SIAM Warwick Student Chapter Conference</a> (focus: machine learning and statistics), Coventry, UK, November 9, 2016 (invited)</p>
 
+<p>[117] MIGSAA Faculty Talk, Int. Centre for Mathematical Sciences, Edinburgh, UK, October 14, 2016 (invited)</p>
 
+<p>[116] Fellow Short Talk, <a href="https://turing.ac.uk/">Alan Turing Institute</a>, London, UK, October 13, 2016 (invited) <br>
+<a href="https://www.youtube.com/watch?v=RbkhWrTbrKs"><img alt="YouTube" src="imgs/youtube.png" height="15"></a></p>
 
+<p>[115] <a
+href="http://www.maths.ed.ac.uk/%7Emkalck/GAMES.html">GAMES  seminar</a>, Edinburgh, UK, October 10, 2016 (invited) </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Computing - Modeling and Reconstruction</a>, KAUST
-            Conference Center, Thuwal, Saudi Arabia, April 10-12, 2017
-            (invited) [<a href="talks/TALK-SPDHG.pdf">slides</a>] </p>
-          <p>[125] <a href="http://www.baspfrontiers.org/">2017 BASP
-              Frontiers Workshop</a>, Villars-sur-Ollon, Switzerland,
-            January 29-February 2, 2017 (invited)</p>
-          <p>[124] Research Seminar, Department of Computing, Imperial
-            College London, UK, January 20, 2017 (invited) </p>
-
-
-
-          <h1> 2016 Talks</h1>
-          <p>[123] <a
-              href="https://events.yandex.ru/events/science-seminars/02-dec-2016/">Yandex
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Seminar</a>, Moscow, Russia, December 2, 2016 (invited) <a
-              href="https://www.youtube.com/watch?v=DLbZJnz04cE"><img
-                alt="YouTube" src="imgs/youtube.png" border="0"
-                width="30" height="21"></a></p>
-          <p>[122] <a href="http://www.skoltech.ru/en/">Skoltech</a>
-            Seminar, Moscow, Russia, December 1, 2016 (invited)</p>
-          <p>[121] <a
-href="http://machinelearningforbigdata.telecom-paristech.fr/fr/article/workshop-friday-novembre-25-distributed-machine-learning">Workshop
-on
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Distributed Machine Learning</a>, Telecom ParisTech,
-            Paris, November 25, 2016 (invited)</p>
-          <p>[120] <a
-href="http://www.southampton.ac.uk/cormsis/news/events/2016/Nov-Dec/seminar-richtarik.page?">CORMSIS
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Seminar</a>, University of Southampton, Southampton, UK,
-            November 17, 2016 (invited)<br>
-          </p>
-          <p> [119] <a
-href="http://www.lse.ac.uk/maths/Seminars/Seminar-on-Combinatorics-Games-and-Optimisation.aspx">Seminar
-on
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Combinatorics, Games and Optimisation</a>, London School
-            of Economics, London, UK, November 16, 2016 (invited)</p>
-          <p>[118] <a
-              href="http://warwicksiam.yolasite.com/stream-1.php">SIAM
-              Warwick Student Chapter Conference</a> (focus: machine
-            learning and statistics), Coventry, UK, November 9, 2016
-            (invited)</p>
-          <p> [117] MIGSAA Faculty Talk, Int. Centre for Mathematical
-            Sciences, Edinburgh, UK, October 14, 2016 (invited)</p>
-          <p>[116] Fellow Short Talk, <a href="https://turing.ac.uk/">Alan
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Turing Institute</a>, London, UK, October 13, 2016
-            (invited) <a
-              href="https://www.youtube.com/watch?v=RbkhWrTbrKs"><img
-                alt="YouTube" src="imgs/youtube.png" border="0"
-                width="30" height="21"></a></p>
-          <p>[115] <a
-              href="http://www.maths.ed.ac.uk/%7Emkalck/GAMES.html">GAMES
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              seminar</a>, Edinburgh, UK, October 10, 2016 (invited) </p>
-          <p>[114] <a
+<p>[114] <a
 href="https://wsc.project.cwi.nl/woudschoten-conferences/2016-woudschoten-conference">41st
-Woudschoten
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Conference</a>, Zeist, The Netherlands, October 5-7, 2016
-            (2 invited keynote lectures in the stream: "Numerical
-            methods for big data analytics") [<a
+Woudschoten Conference</a>, Zeist, The Netherlands, October 5-7, 2016
+(2 invited keynote lectures in the stream: "Numerical
+methods for big data analytics") [<a
 href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture1.pdf">Lecture   1</a>, <a
 href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture2.pdf">Lecture   2</a>] </p>
 
@@ -990,20 +506,14 @@ IMA Conference on Numerical Linear Algebra and Optimization</a>, Birmingham, Sep
 href="http://www.theorsociety.com/Pages/Conferences/OR58/OR58.aspx">OR58</a>,
 The 58th Annual Conference of the OR Society, Portsmouth, UK,
 September 6-8, 2016 (closing plenary) [<a
-href="talks/TALK-OR58.pdf">slides</a>] <a
-href="https://www.youtube.com/watch?v=BS0kF4YijGc"><img
-alt="YouTube" src="imgs/youtube.png" border="0" width="30"
-height="21"></a></p>
+href="talks/TALK-OR58.pdf">slides</a>] <br>
+<a href="https://www.youtube.com/watch?v=BS0kF4YijGc"><img alt="YouTube" src="imgs/youtube.png" height="15"></a></p>
 
 <p>
-[109] <a href="http://www.iccopt2016.tokyo/index.html">ICCOPT
-2016</a>, Tokyo, Japan, August 6-11, 2016 (invited)</p>
+[109] <a href="http://www.iccopt2016.tokyo/index.html">ICCOPT 2016</a>, Tokyo, Japan, August 6-11, 2016 (invited)</p>
 
 <p>
-[108] <a href="http://lsec.cc.ac.cn/%7Emoa2016/index.html">2016
-International Workshop on Modern Optimization and
-Applications (MOA 2016)</a>, Beijing, China, June 27-29,
-2016 (invited)</p>
+[108] <a href="http://lsec.cc.ac.cn/%7Emoa2016/index.html">2016 International Workshop on Modern Optimization and Applications (MOA 2016)</a>, Beijing, China, June 27-29, 2016 (invited)</p>
 
 <p>
 [107] <a
@@ -2846,69 +2356,13 @@ Data:
             February 17-19, 2014 (invited <a
               href="talks/Tutorial-London-2014.ppsx">3h tutorial</a> on
             optimization with big data) </p>
-          <p>[64] "Main seminar", <a href="http://premolab.ru/">Laboratory
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              for Structural Methods of Data Analysis in Predictive
+          <p>[64] "Main seminar", <a href="http://premolab.ru/">Laboratory for Structural Methods of Data Analysis in Predictive
               Modeling (PreMoLab)</a>, Moscow Institute of Physics and
             Technology, Moscow, Russia, February 13, 2014 (invited) [<a
-              href="talks/TALK-2014-02-Moscow.ppsx">slides</a>] <a
-              href="https://www.youtube.com/watch?v=0sHOfqhCZw0"><img
-                alt="YouTube" src="imgs/youtube.png" border="0"
-                width="30" height="21"></a></p>
+              href="talks/TALK-2014-02-Moscow.ppsx">slides</a>] <br>
+              <a
+              href="https://www.youtube.com/watch?v=0sHOfqhCZw0"><img alt="YouTube" src="imgs/youtube.png" height="15"></a></p>
 
 
 
@@ -2923,143 +2377,23 @@ Data:
               Information Society</a>, Slovenia, November 7-9, 2013
             (plenary)<br>
           </p>
+
           <p>[61] <a href="https://amplab.cs.berkeley.edu/">AmpLab</a>
             all hands seminar, UC Berkeley, October 29, 2013 [<a
               href="talks/talk-AmpLab_Hydra_10_2013.ppsx">slides</a>]<br>
           </p>
+
           <p>[60] <a
               href="http://simons.berkeley.edu/workshop_bigdata2.html">Parallel
-and
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Distributed Algorithms for Inference and Optimization</a>
+and   Distributed Algorithms for Inference and Optimization</a>
             (a workshop within the <a
               href="http://simons.berkeley.edu/program_bigdata2013.html">Theoretical
-Foundations
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              of Big Data Analysis</a> program), Simons Institute for
+Foundations  of Big Data Analysis</a> program), Simons Institute for
             the Theory of Computing, Berkeley, October 21-25, 2013
             (invited) [<a href="talks/Talk-BigData-Simons.ppsx">slides</a>]
-            <a href="https://www.youtube.com/watch?v=IQgnstB0n2E"><img
-                alt="YouTube" src="imgs/youtube.png" border="0"
-                width="30" height="21"></a> </p>
+            <br> <a href="https://www.youtube.com/watch?v=IQgnstB0n2E"><img
+                alt="YouTube" src="imgs/youtube.png" height="15"></a> </p>
+
           <p>[59] Machine Learning Seminar @ Google, California,
             September 10, 2013 (invited)<br>
           </p>
