--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 Together with <a href = "http://researchers.lille.inria.fr/abellet/">Aurélien Bellet</a> (Inria), <a href = "https://www.cs.cmu.edu/~smithv/">Virginia Smith</a> (Carnegie Mellon) and
 <a href= "https://ist.ac.at/en/research/alistarh-group/">Dan Alistarh</a> (IST Austria), we are launching <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW: Federated Learning One World Seminar.</a>
 The seminar will take place on a weekly basis on Wednesdays. All talks will be delivered via Zoom. The first two talks are <br> <br>
-May 13, Ahmed Khaled (Cairo): On the Convergence of Local SGD on Identical and Heterogeneous Data <br> <br>
-May 20, Blake Woodworth (TTIC): Is Local SGD Better than Minibatch SGD? <br> 
-<br>
+May 13, <a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo): On the Convergence of Local SGD on Identical and Heterogeneous Data <br> <br>
+May 20, <a href="http://ttic.uchicago.edu/~blake/">Blake Woodworth</a> (TTIC): Is Local SGD Better than Minibatch SGD? <br> 
 
 <br>
 <br>
