2 more FLOW talks

--- a/i_team.html
+++ b/i_team.html
@@ -66,7 +66,7 @@
 
           <h2>MS Students </h2>
           <ul>
-            <li><a href="https://www.researchgate.net/profile/Egor_Shulgin">Egor Shulgin</a> (1/2020-present)</li>
+            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
@@ -90,12 +90,12 @@
             <li> <a href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019<br> </li>
             <li><a href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav Elsukov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
-            <li><a href="https://www.researchgate.net/profile/Egor_Shulgin">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018<br> </li>
-            <li><a href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018<br>   </li>
+            <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018<br>   </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018 </li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018<br> </li>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018<br> </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
             <li><a href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @ KAUST<br> </li>
           </ul>
