--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
 <br>
 Together with <a href = "http://researchers.lille.inria.fr/abellet/">Aurélien Bellet</a> (Inria), <a href = "https://www.cs.cmu.edu/~smithv/">Virginia Smith</a> (Carnegie Mellon) and
 <a href= "https://ist.ac.at/en/research/alistarh-group/">Dan Alistarh</a> (IST Austria), we are launching <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW: Federated Learning One World Seminar.</a>
-The seminar will take place on a weekly basis on Wednesdays. All talks will be delivered via Zoom. The first two talks are <br> <br>
+The seminar will take place on a weekly basis on Wednesdays. All talks will be delivered via Zoom. The first few talks are: <br> <br>
 May 13, <a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo): On the Convergence of Local SGD on Identical and Heterogeneous Data <br> <br>
-May 20, <a href="http://ttic.uchicago.edu/~blake/">Blake Woodworth</a> (TTIC): Is Local SGD Better than Minibatch SGD? <br> 
+May 20, <a href="http://ttic.uchicago.edu/~blake/">Blake Woodworth</a> (TTIC): Is Local SGD Better than Minibatch SGD? <br> <br>
+May 27, <a href="http://papail.io">Dimitris Papailiopoulos</a> (Wisconsin Madison): Robustness in Federated Learning May be Impossible Without an All-knowing Central Authority
+ <br> <br>
+June 3, No talk due to NeurIPS deadline <br> <br>
+June 10, <a href="https://people.epfl.ch/sai.karimireddy">Sai Praneeth Karimireddy</a> (EPFL): Stochastic Controlled Averaging for Federated Learning <br>
 
 <br>
 <br>
