--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>May 5, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2005.01097">"Adaptive Learning of the Optimal Mini-Batch Size of SGD"</a> -
+joint work with <a href="https://scholar.google.com/citations?user=caAyffEAAAAJ&hl=en">Motasem Alfarra</a>,
+<a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a>, 
+and <a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Albasyoni</a>
+and <a href="http://www.bernardghanem.com">Bernard Ghanem</a>.<br>
+<br>
+
+Abstract: <i>
+Recent advances in the theoretical understandingof SGD (Qian et al., 2019) led to a formula for the optimal mini-batch size minimizing the number of effective data passes, i.e., the number of iterations times the mini-batch size. However, this formula is of no practical value as it depends on the knowledge of the variance of the stochastic gradients evaluated at the optimum. In this paper we design a practical SGD method capable of learning the optimal mini-batch size adaptively throughout its iterations. Our method does this provably, and in our experiments with synthetic and real data robustly exhibits nearly optimal behaviour; that is, it works as if the optimal mini-batch size was known a-priori. Further, we generalize our method to several new mini-batch strategies not considered in the literature before, including a sampling suitable for distributed implementations.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>May 4, 2020</h3>
 <h1>FLOW: Federated Learning One World Seminar</h1>
 
@@ -41,7 +66,8 @@ May 20, <a href="http://ttic.uchicago.edu/~blake/">Blake Woodworth</a> (TTIC): I
 May 27, <a href="http://papail.io">Dimitris Papailiopoulos</a> (Wisconsin Madison): Robustness in Federated Learning May be Impossible Without an All-knowing Central Authority
  <br> <br>
 June 3, No talk due to NeurIPS deadline <br> <br>
-June 10, <a href="https://people.epfl.ch/sai.karimireddy">Sai Praneeth Karimireddy</a> (EPFL): Stochastic Controlled Averaging for Federated Learning <br>
+June 10, <a href="https://people.epfl.ch/sai.karimireddy">Sai Praneeth Karimireddy</a> (EPFL): Stochastic Controlled Averaging for Federated Learning <br> <br>
+June 17, <a href="https://fhanzely.github.io">Filip Hanzely</a> (KAUST): Federated Learning of a Mixture of Global and Local Models: Local SGD and Optimal Algorithms <br>
 
 <br>
 <br>
