--- a/i_talks.html
+++ b/i_talks.html
@@ -33,6 +33,7 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
 <h1> Future Talks</h1>
 
 <p>
@@ -98,6 +99,12 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 
 <h1>Video Talks</h1>
 
+
+
+<p>
+<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">On Second Order Methods and Randomness</a> (72 mins)
+<br> Montreal MLOpt Seminar, 5/2020
+</p>
 
 <p>
 <a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a> (73 mins)
@@ -169,18 +176,31 @@ Simons Institute, Berkeley, 10/2013
 
 
 
-<h1>2019 Talks</h1>
+<h1>2020 Talks</h1>
+
+<p>
+[168]
+On Second Order Methods and Randomness,
+Montréal Machine Learning and Optimization (MTL MLOpt) Seminar, 5/2020 (invited) <br>
+<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
+</p>
 
 <p>
 [167]
-<a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a>,
- One World Optimization Seminar, April 27, 2020 (invited)
-</p>
+On Second Order Methods and Randomness,
+ One World Optimization Seminar, April 27, 2020 (invited) <br>
+ <a href="https://www.youtube.com/watch?v=HGQkct3db-c">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
+ </p>
 
 <p>
 [166]
 2 Research Talks at <a href="https://www.eset.com/us/">ESET</a>, Bratislava, Slovakia, January 7, 2020 (invited)
 </p>
+
+
+
+<h1>2019 Talks</h1>
+
 
 <p>
 [165]
