--- a/i_papers.html
+++ b/i_papers.html
@@ -49,21 +49,25 @@
         <li><a href="i_consulting.html">Consulting</a></li>
       </ul>
       <div id="wrapper" class="main">
-        <div id="content"> All papers are listed below in reverse
-          chronological order in which they appeared online.<br>
+        <div id="content"> All papers are listed below in reverse chronological order in which they appeared online.<br>
           <br>
           <meta charset="utf-8">
 
           <h1> Prepared in 2020 </h1>
 
+          [131] Motasem Alfarra, Slavomír Hanzely, Alyazeed Albasyoni, Bernard Ghanem, and Peter Richtárik <br>
+          <b>Adaptive Learning of the Optimal Mini-Batch Size of SGD</b><br>
+          [<a href="https://arxiv.org/abs/2005.01097">arXiv</a>]  <br>
+          <br>
+
           [130] Adil Salim, Laurent Condat, Konstantin Mishchenko, and Peter Richtárik <br>
           <b>Dualize, split, randomize: fast nonsmooth optimization algorithms</b><br>
-          [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [PDDY, SPDDY, SPD3O, SPAPC] <br>
+          [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [code: PDDY, SPDDY, SPD3O, SPAPC] <br>
           <br>
 
           [129] Atal Narayan Sahu, Aritra Dutta, Aashutosh Tiwari, and Peter Richtárik <br>
           <b>On the convergence analysis of asynchronous SGD for solving consistent linear systems</b><br>
-          [<a href="https://arxiv.org/abs/2004.02163">arXiv</a>] [DASGD] <br>
+          [<a href="https://arxiv.org/abs/2004.02163">arXiv</a>] [code: DASGD] <br>
           <br>
 
           [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
