--- a/i_talks.html
+++ b/i_talks.html
@@ -102,12 +102,12 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 
 
 <p>
-<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">On Second Order Methods and Randomness</a> (72 mins)
+<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">"On Second Order Methods and Randomness"</a> (72 mins)
 <br> Montreal MLOpt Seminar, 5/2020
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a> (73 mins)
+<a href="https://www.youtube.com/watch?v=HGQkct3db-c">"On Second Order Methods and Randomness"</a> (73 mins)
 <br> One World Optimization Seminar, 4/2020
 </p>
 
