--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 Our paper
 <a href="https://arxiv.org/abs/1901.09437">"99% of Distributed Optimization is a Waste of Time: The Issue and How to Fix it"</a> -
 joint work with <a href="https://konstmish.github.io">Konstantin Mishchenko</a> and
-<a href="https://fhanzely.github.io/index.html">Slavomír Hanzely</a>,
+<a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>,
 was accepted to <a href="http://www.auai.org/uai2020/">Conference on Uncertainty in Artificial Intelligence (UAI 2020)</a>.<br>
 
 
