--- a/i_papers.html
+++ b/i_papers.html
@@ -326,6 +326,7 @@
 
           [91] Konstantin Mishchenko, Filip Hanzely and Peter Richtárik<br>
           <b>99% of distributed optimization is a waste of time: the issue and how to fix it</b><br>
+          To appear in: Uncertainty in Artificial Intelligence, 2020 (UAI 2020) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1901.09437">arXiv</a>] [code:  IBCD, ISAGA, ISGD, IASGD, ISEGA]<br>
           <br>
