--- a/i_talks.html
+++ b/i_talks.html
@@ -80,10 +80,6 @@ University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <spa
 </p>
 
 <p>
-<a href="https://mtl-mlopt.github.io">Montréal Machine Learning and Optimization (MTL MLOpt) Seminar</a>, via Google Meet, May 8, 2020 (invited)
-</p>
-
-<p>
 <a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
 </p>
 
@@ -178,17 +174,17 @@ Simons Institute, Berkeley, 10/2013
 
 <h1>2020 Talks</h1>
 
+
 <p>
 [168]
 On Second Order Methods and Randomness,
-Montréal Machine Learning and Optimization (MTL MLOpt) Seminar, 5/2020 (invited) <br>
+<a href="https://mtl-mlopt.github.io">Montréal Machine Learning and Optimization (MTL MLOpt) Seminar</a>,   via Google Meet, May 8, 2020 (invited) <br>
 <a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
 </p>
 
 <p>
 [167]
-On Second Order Methods and Randomness,
- One World Optimization Seminar, April 27, 2020 (invited) <br>
+On Second Order Methods and Randomness, One World Optimization Seminar, April 27, 2020 (invited) <br>
  <a href="https://www.youtube.com/watch?v=HGQkct3db-c">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
  </p>
 
