--- a/i_papers.html
+++ b/i_papers.html
@@ -584,7 +584,7 @@ href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10394/10
 
           [56] Peter Richtárik and Martin Takáč<br>
           <b>Stochastic reformulations of linear systems: algorithms and convergence theory</b><br>
-          to appear in SIAM Journal on Matrix Analysis and Applications<br>
+          <a href="https://epubs.siam.org/doi/abs/10.1137/18M1179249">SIAM Journal on Matrix Analysis and Applications 41(2):487–524, 2020</a><br>
           [<a href="https://arxiv.org/abs/1706.01108">arXiv</a>] [<a href="talks/TALK-2017-FieldsInstitute-AN70.pdf">slides</a>] [code: basic, parallel and accelerated methods] <br>
           <br>
 
