--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
 
 
 
+<h3>May 20, 2020</h3>
+<h1>Paper Appeared in SIMAX</h1>
+<br>
+
+The paper "Stochastic reformulations of linear systems: algorithms and convergence theory", joint work with
+Martin Takáč, just appeared online on the SIMAX website: <a href="https://epubs.siam.org/doi/abs/10.1137/18M1179249">SIAM Journal on Matrix Analysis and Applications 41(2):487–524, 2020</a>.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>May 20, 2020</h3>
+<h1>2nd FLOW Talk: Blake Woodworth (TTIC)</h1>
+<br>
+
+<a href="https://ttic.uchicago.edu/~blake/">Blake Woodworth (TTIC)</a> has given a great talk at the FLOW seminar today. His talk title was "Is Local SGD Better than Minibatch SGD?".
+The slides and YouTube video <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive#h.marh0ook3glo">can be found here.</a> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>May 15, 2020</h3>
 <h1>Paper Accepted to UAI 2020</h1>
@@ -44,6 +75,21 @@ joint work with <a href="https://konstmish.github.io">Konstantin Mishchenko</a> 
 <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>,
 was accepted to <a href="http://www.auai.org/uai2020/">Conference on Uncertainty in Artificial Intelligence (UAI 2020)</a>.<br>
 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>May 13, 2020</h3>
+<h1>1st FLOW Talk: Ahmed Khaled (Cairo)</h1>
+<br>
+
+<a href="https://rka97.github.io">Ahmed Khaled (Cairo)</a> has given his first research talk ever today. Topic: "On the Convergence of Local SGD on Identical and Heterogeneous Data".
+It was a great talk - I can't wait to see him give talks in the future. The abstract, link to the relevant papers, slides and YouTube video <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive#h.azhfwca3oax9">are here.</a> <br>
 
 <br>
 <br>
