--- a/index.html
+++ b/index.html
@@ -33,6 +33,45 @@
 
 
 
+<h3>May 22, 2020</h3>
+<h1>Eduard's ICLR Talk </h1>
+<br>
+
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> presented our paper <a href="https://openreview.net/forum?id=HylAoJSKvH">"A Stochastic Derivative Free Optimization Method with Momentum"</a> at ICLR. This paper is joint work with
+Adel Bibi, Ozan Sener, and El Houcine Bergou. Eduard's 5min talk can be found here: <br>
+
+<br>
+<a href="https://iclr.cc/virtual_2020/poster_HylAoJSKvH.html"> <img alt="" src="imgs/ICLR2020-Eduard.png" width="700" ></a>
+<br>
+
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>May 21, 2020</h3>
+<h1>"JacSketch" Paper Appeared in Mathematical Programming</h1>
+<br>
+
+The paper "Stochastic reformulations of linear systems: algorithms and convergence theory", joint work with
+Martin Takáč, just appeared online on the SIMAX website: <a href="https://epubs.siam.org/doi/abs/10.1137/18M1179249">SIAM Journal on Matrix Analysis and Applications 41(2):487–524, 2020</a>.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>May 20, 2020</h3>
 <h1>Paper Appeared in SIMAX</h1>
 <br>
