--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <br>
 
 <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> presented our paper <a href="https://openreview.net/forum?id=HylAoJSKvH">"A Stochastic Derivative Free Optimization Method with Momentum"</a> at ICLR. This paper is joint work with
-Adel Bibi, Ozan Sener, and El Houcine Bergou. Eduard's 5min talk can be found here: <br>
+Adel Bibi, Ozan Sener, and El Houcine Bergou. Eduard's 5min talk can be found here: <br >
 
 <br>
 <a href="https://iclr.cc/virtual_2020/poster_HylAoJSKvH.html"> <img alt="" src="imgs/ICLR2020-Eduard.png" width="700" ></a>
@@ -60,8 +60,9 @@ Adel Bibi, Ozan Sener, and El Houcine Bergou. Eduard's 5min talk can be found he
 <h1>"JacSketch" Paper Appeared in Mathematical Programming</h1>
 <br>
 
-The paper "Stochastic reformulations of linear systems: algorithms and convergence theory", joint work with
-Martin Takáč, just appeared online on the SIMAX website: <a href="https://epubs.siam.org/doi/abs/10.1137/18M1179249">SIAM Journal on Matrix Analysis and Applications 41(2):487–524, 2020</a>.
+The paper "Stochastic quasi-gradient methods: variance reduction via Jacobian sketching", joint work
+with Robert M. Gower and Francis Bach, just appeared online on the Mathematical Programming
+website: <a href="https://link.springer.com/article/10.1007/s10107-020-01506-0">Mathematical Programming, 2020</a>.
 <br>
 
 <br>
