--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
 
 
 
+<h3>May 27, 2020</h3>
+<h1>NeurIPS Abstract Deadline Today</h1>
+<br>
+
+Polishing <a href="https://nips.cc">NeurIPS</a> abstracts... <br >
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 
 
 <h3>May 22, 2020</h3>
@@ -43,7 +58,6 @@ Adel Bibi, Ozan Sener, and El Houcine Bergou. Eduard's 5min talk can be found he
 <br>
 <a href="https://iclr.cc/virtual_2020/poster_HylAoJSKvH.html"> <img alt="" src="imgs/ICLR2020-Eduard.png" width="700" ></a>
 <br>
-
 
 
 
