5 ICML papers accepted, Fall 2020 course

--- a/i_teaching.html
+++ b/i_teaching.html
@@ -37,6 +37,8 @@
 
 <ul>
 
+  <li> CS 331, Stochastic Gradient Descent Methods (<a href="https://piazza.com/kaust.edu.sa/fall2020/cs331">Fall 2020 - Piazza</a>)</li>
+
   <li> CS 390T, Special Topics in Federated Learning (<a href="https://piazza.com/kaust.edu.sa">Spring 2020 - Piazza</a>)</li>
 
   <li> CS 394D, Contemporary Topics in Machine Learning (Spring 2018, <a href="https://www.piazza.com/kaust.edu.sa/spring2019/cs394d">Spring 2019 - Piazza</a>)</li>
