--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Abstract: <i>In this paper, we propose a new randomized second-order optimizatio
 
 
 
-3) <a href="https://arxiv.org/abs/1910.09529">"Adaptive gradient descent without descent"</a> - work of  <a
+3) <a href="https://arxiv.org/abs/1910.09529">"Adaptive Gradient Descent Without Descent"</a> - work of  <a
 href="https://konstmish.github.io">Konstantin Mishchenko</a> and <a href="https://people.epfl.ch/yurii.malitskyi">Yura Malitsky</a>.<br>
 <br>
 Abstract: <i>We present a strikingly simple proof that two rules are sufficient to automate gradient descent: 1) don't increase the stepsize too fast and 2) don't overstep the local curvature. No need for functional values, no line search, no information about the function except for the gradients. By following these rules, you get a method adaptive to the local geometry, with convergence guarantees depending only on smoothness in a neighborhood of a solution. Given that the problem is convex, our method will converge even if the global smoothness constant is infinity. As an illustration, it can minimize arbitrary continuously twice-differentiable convex function. We examine its performance on a range of convex and nonconvex problems, including matrix factorization and training of ResNet-18. </i> <br>
