--- a/i_join.html
+++ b/i_join.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <!--[if lt IE 9]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+
     <link rel="stylesheet" href="style.css">
     <title>Peter Richtarik</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168147887-9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168147887-9');
+    </script>
+
+
+
+
+
   </head>
   <body>
     <div id="page">
@@ -133,7 +144,7 @@
 
           <h1>Postdocs and Research Scientists
           </h1>
-          
+
           I always have postdoc and research scientist positions open
           for outstanding applicants. The initial application process is
           quite informal. Send to me your CV, transcript of grades and
