--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Peter Richtarik</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168147887-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168147887-1');
+    </script>
+
+
   </head>
+
+
   <body>
     <div id="page">
       <div id="header_wrapper">
