--- a/i_oldnews copy.html
+++ b/i_oldnews copy.html
@@ -5,6 +5,19 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Peter Richtarik</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37355274-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-37355274-2');
+    </script>
+
+
+
   </head>
   <body>
     <div id="page">
