--- a/i_papers.html
+++ b/i_papers.html
@@ -69,6 +69,7 @@
           [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
           <b>From local SGD to local fixed point methods for federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
+          ICML 2020 <br>
           [<a href="https://arxiv.org/abs/2004.01442">arXiv</a>] [code: LDFPM, RDFPM] <br>
           <br>
 
@@ -81,6 +82,7 @@
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
+          ICML 2020 <br>
           [<a href="https://arxiv.org/abs/2002.11364">arXiv</a>] [code: ACGD, ADIANA] <br>
           <br>
 
@@ -91,6 +93,7 @@
 
           [124] Filip Hanzely, Nikita Doikov, Peter Richtárik and Yurii Nesterov<br>
           <b>Stochastic subspace cubic Newton method</b><br>
+          ICML 2020 <br>
           [<a href="https://arxiv.org/abs/2002.09526">arXiv</a>] [code: SSCN] <br>
           <br>
 
@@ -113,6 +116,7 @@
 
           [120] Filip Hanzely, Dmitry Kovalev and Peter Richtárik<br>
           <b>Variance reduced coordinate descent with acceleration: new method with a surprising application to finite-sum problems</b><br>
+          ICML 2020 <br>
           [<a href="https://arxiv.org/abs/2002.04670">arXiv</a>]<br>
           <br>
 
