--- a/i_talks.html
+++ b/i_talks.html
@@ -49,7 +49,7 @@
 
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
-of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited)
+of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited) <span class="important">postponed until August 2022 due to Covid-19</span>
 </p>
 
 <p>
@@ -83,6 +83,7 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 
 <p>
 <a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
+<span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
